# ESPMaruder

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  partitions.csv  plan.md  sdkconfig.debug.defaults  sdkconfig.defaults  sdkconfig.headless.defaults  sdkconfig.release.defaults
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
agents/: agent-core-engines.md  agent-docs-release.md  agent-governance.md  agent-gui-web.md  agent-hardening-test.md  agent-platform-bootstrap.md  agent-radio-observability.md
components/: README.md
components/cli/: CMakeLists.txt
components/cli/include/: cli_colors.h  cli_engine.h  spectra_cli.h
components/cli/src/: cli_engine.c  spectra_cli.c
components/core_system/: CMakeLists.txt
components/gui/: CMakeLists.txt  Kconfig  README.md
components/packet_engine/: CMakeLists.txt  README.md
components/radio_802154/: README.md
components/radio_ble/: CMakeLists.txt  README.md
components/radio_wifi/: CMakeLists.txt  (+1 more)
docs/: ARCHITECTURE.md  LEGAL_NOTICE.md  README.md  ROADMAP.md
governance/: compliance-gate-checklist.md  sprint-0-scope-matrix.md
main/: CMakeLists.txt  main.c  spectra_config.h  version.h
traceability/: phase-1-1-bootstrap.md  phase-1-2-storage.md  phase-1-3-cli.md  phase-1-4-filter-stats.md  phase-1-4-packet-buffer.md  phase-1-4-pcap-writer.md  phase-1-5-utils.md  phase-1-6-gui-foundation-step-1.md  phase-2-1-wifi-engine-scanner.md
(+117 files in other folders)
